2020-05-25  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING (Compiler Passes and Phases): Update.
	(Transformation Phases): Likewise.
	(Analysis Phases): Likewise.

2020-05-24  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ctf.pk (CTF_Type): Fix application of bit-concatenation
	in pretty_printer.
	(ctf_string): Use an Elf64_File instead of a header.
	(ctf_get_header): Likewise.

2020-05-17  Tim Rühsen  <tim.ruehsen@gmx.de>

	* gnulib: Update to master

2020-05-23  John Darrington <john@darrington.wattle.id.au>

	* poke/poke.c (pk_fatal): Call abort instead of exit.
	* libpoke/pkl.c (pklresolve_module): On lookup failure,
	return NULL instead of asserting.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (offset_cast): Operate with integers of
	to_base_unit units, to avoid overflows and division by zero.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/eq-integers-5.pk: New test.
	* testsuite/poke.pkl/eq-offsets-8.pk: Likewise.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.h (pkl_execute_file): Add argument exit_status.
	* libpoke/libpoke.h (pk_compile_file): Likewise.
	* libpoke/pkl.c (pkl_execute_file): Likewise.
	* libpoke/libpoke.c (pk_compile_file): Likewise.
	* libpoke/pkl-rt.pk (_pkl_exception_handler): Return the exit
	status.
	(Exception): Add field exit_status.
	(exit): The status code is 0 by default.
	* libpoke/pkl-asm.c (pkl_asm_finish): Adapted to the fact the
	default signal handler returns the exit status.
	* poke/poke.c (parse_args_2): Use the program's exit status as the
	exit status of poke when running -L.
	* libpoke/pvm-val.h (pvm_make_exception): Get an exit_exception
	argument.
	* libpoke/pvm-val.c (pvm_make_exception): Handle the exit status
	field of exceptions.
	* libpoke/pvm.h (PVM_E_EXIT): Define.
	(PVM_E_EXIT_MSG): Likewise.
	(PVM_E_EXIT_ESTATUS): Likewise.
	* libpoke/pvm.jitter (PVM_RAISE_DFL): Define and use through the
	file.