@@ -1,3 +1,8 @@
+2020-05-27  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pk-val.c (pk_make_offset): Return PK_NULL if the
+	arguments are not of the right type.
+
 2020-05-25  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* HACKING (Compiler Passes and Phases): Update.
